--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/hitanshu-dhawan/SpannableStringFormatter/issues"
   },
-  "homepage": "https://github.com/hitanshu-dhawan/SpannableStringFormatter#readme"
+  "homepage": "https://github.com/hitanshu-dhawan/SpannableStringFormatter#readme",
+  "devDependencies": {
+    "@types/jest": "^26.0.10",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.2.0",
+    "typescript": "^4.0.2"
+  }
 }
