--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "spannable-string-formatter",
   "version": "0.0.2",
   "description": "A SpannableString Formatter for JavaScript",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "jest"
