--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
     "strict": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "lib", "tests"]
+  "exclude": ["node_modules", "lib", "tests", "coverage"]
 }
