--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "format": "prettier --write src/ tests/"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "jest": "^26.4.2",
+    "prettier": "^2.0.5",
     "ts-jest": "^26.2.0",
     "typescript": "^4.0.2"
   }
