--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "format": "prettier --write src/ tests/"
+    "format": "prettier --write src/ tests/",
+    "lint": "eslint src/ tests/"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,9 @@
   "homepage": "https://github.com/hitanshu-dhawan/SpannableStringFormatter#readme",
   "devDependencies": {
     "@types/jest": "^26.0.10",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint": "^7.7.0",
     "jest": "^26.4.2",
     "prettier": "^2.0.5",
     "ts-jest": "^26.2.0",
