--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0",
+    "husky": "^4.2.5",
     "jest": "^26.4.2",
     "prettier": "^2.0.5",
     "ts-jest": "^26.2.0",
