--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "type": "git",
     "url": "git+https://github.com/hitanshu-dhawan/SpannableStringFormatter.git"
   },
-  "author": "Hitanshu Dhawan",
+  "keywords": [
+    "android",
+    "android-library",
+    "spans",
+    "spannable",
+    "spannablestring",
+    "spannablestringbuilder"
+  ],
+  "author": "Hitanshu Dhawan <hitanshudhawan1996@gmail.com>",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/hitanshu-dhawan/SpannableStringFormatter/issues"
