--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
   },
   "homepage": "https://github.com/hitanshu-dhawan/SpannableStringFormatter#readme",
   "devDependencies": {
-    "@types/jest": "^26.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/parser": "^3.9.1",
-    "eslint": "^7.7.0",
-    "husky": "^4.2.5",
-    "jest": "^26.4.2",
-    "prettier": "^2.0.5",
-    "pretty-quick": "^3.0.0",
-    "ts-jest": "^26.2.0",
-    "typescript": "^4.0.2"
+    "@types/jest": "26.0.10",
+    "@typescript-eslint/eslint-plugin": "4.0.0",
+    "@typescript-eslint/parser": "3.9.1",
+    "eslint": "7.7.0",
+    "husky": "4.2.5",
+    "jest": "26.4.2",
+    "prettier": "2.0.5",
+    "pretty-quick": "3.0.0",
+    "ts-jest": "26.2.0",
+    "typescript": "4.0.2"
   }
 }
